# tgrad

./: CMakeLists.txt
include/: device.h  dtype.h  shape.h  storage.h  tensor.h
src/: device.cpp  dtype.cpp  shape.cpp  storage.cpp  tensor.cpp
tests/unit/: test_tensor.cpp
